--- a/ServeurWarsOfBaraxa/ServeurWarsOfBaraxa.csproj
+++ b/ServeurWarsOfBaraxa/ServeurWarsOfBaraxa.csproj
@@ -40,10 +40,13 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="warsofbaraxa, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="warsofbaraxa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\warsofbaraxa\warsofbaraxa\bin\Debug\warsofbaraxa.dll</HintPath>
-      <Private>False</Private>
+    </Reference>
+    <Reference Include="WarsOfBaraxaBD, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\WarsOfBaraxaBD\WarsOfBaraxaBD\bin\Debug\WarsOfBaraxaBD.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
