--- a/ServeurWarsOfBaraxa/ServeurWarsOfBaraxa.csproj
+++ b/ServeurWarsOfBaraxa/ServeurWarsOfBaraxa.csproj
@@ -40,8 +40,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="warsofbaraxa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="warsofbaraxa">
       <HintPath>..\..\warsofbaraxa\warsofbaraxa\bin\Debug\warsofbaraxa.dll</HintPath>
     </Reference>
     <Reference Include="WarsOfBaraxaBD, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
